# api

./: .coveragerc  .dockerignore  .env.example  .gitignore  .watchfilesignore  404.html  AGENTS.md  COMMIT_MESSAGE.txt  DESIGN.md  DOCKER_FD_FIX.md  Dockerfile  Dockerfile.kamal  INDEXING_FIX_SUMMARY.md  LICENSE  Makefile  README.md  VERIFY_X_FORWARDED_FOR.md  conftest.py  docker-compose.test.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  run_index.py  run_migrations.py  run_tests_with_real_data.sh  todo.md
backend/: __appsignal__.py  conftest.py  pyproject.toml  pytest.ini
backend/app/: main.py  security_utils.py  viewers.py
backend/app/api/: errors.py  schemas.py
backend/app/elasticsearch/: __init__.py  client.py  index.py  mappings.py  search.py  suggest.py
backend/app/events/: document_events.py
backend/app/metadata/: __init__.py
backend/app/middleware/: api_proxy_middleware.py  rate_limit_middleware.py  turnstile_middleware.py
backend/app/services/: admin_service.py  allmaps_service.py  api_key_service.py  api_usage_log_service.py  cache_service.py  citation_formats_service.py  citation_service.py  data_dictionary_repository.py  distribution_repository.py  distribution_sync.py  download_service.py  durable_response_cache.py  feedback_service.py  gin_blog_service.py  image_service.py  language_service.py  licensed_access_repository.py  link_service.py  mcp_service.py  metadata_transform_service.py  nominatim_service.py  ogc_projector.py  ogm_field_mapper.py  provider_throttle.py  reference_reconstruction.py  relationship_service.py  relationship_sync.py  resource_representation_cache.py  search_service.py  shapefile_service.py  similar_items_service.py  sitemap_service.py  slackbot_service.py  spatial_facet_indexing_service.py  spatial_facet_service.py  static_map_service.py  thumbnail_alias_service.py  thumbnail_queue_service.py  thumbnail_state_service.py  turnstile_service.py  (+1 more)
backend/app/tasks/: allmaps.py  analytics_events.py  api_usage_enrichment.py  bridge_sync.py  entities.py  gin_blog_sync.py  ogm_harvest.py  spatial_facets.py  static_maps.py  worker.py
backend/data/: btaa_geospatial_api.txt
backend/data/fixtures/: btaa_fixtures_data.csv.numbers  download_b1g_fixtures.py  download_btaa_fixtures.py
backend/data/schemas/: search.schema.json
backend/db/: async_engine.py  config.py  database.py  models.py  session.py  sync_engine.py
backend/db/migrations/: README_distribution_migrations.md  add_api_keys_allowed_ips.py  add_btaa_ogm_fields.py  add_enrichment_type.py  add_fast_gazetteer.py  add_latest_btaa_schema_fields.py  analytics_storage.py  api_rate_limiting.py  bridge_old_production.py  create_ai_enrichments.py  create_api_rate_limiting_tables.py  create_bridge_sync_tables.py  create_data_dictionary_tables.py  create_distribution_tables.py  (+28 more)
backend/docs/: IP_WHITELISTING_RECOMMENDATIONS.md  caching.md  dct_references_inventory.md  distribution_tables_quick_reference.md  kamal_deployment.md  old_database_migration.md
backend/examples/: advanced_queries_example.py  facet_search_example.py  geo_polygon_search_example.py  spatial_search_bbox_example.py  spatial_search_distance_example.py
backend/scripts/: backfill_distributions.py  backup_elasticsearch.py  backup_postgres_to_s3.py  bootstrap_kamal_deploy_user.sh  bridge_status_summary.py  check_elasticsearch_health.py  check_kamal_network_sanity.py  check_mapping.py  clear_cache_by_type.py  clear_thumbnail_cache.py  clone_db_for_tests.sh  cron_env.sh  debug_county_query.py  debug_index_missing_resources.py  debug_static_map.py  debug_thumbnail_source.py  diagnose_index_failures.py  diagnose_missing_resources.py  generate_sitemap.py  ingest_btaa_fixtures.py  ingest_gbl_fixtures.py  list_indices.py  load_fixtures.py  manage_analytics_storage.py  manage_visual_asset_stage.py  monitor_reindex.py  monitor_spatial_facet_progress.py  populate_allmaps.py  populate_distributions.py  populate_ogm_repos.py  populate_relationships.py  populate_spatial_facets.py  prime_resource_representation_cache.py  prime_static_map_cache.py  prime_thumbnail_cache.py  prune_generated_api_response_cache.py  query_wof_placetypes.py  refresh_resource_caches.py  regenerate_api_keys.py  reindex.py  (+19 more)
backend/static/: brand.css
backend/templates/: docs.html  ogm_repo_dashboard.html
backend/tests/: conftest.py  test_cache_service.py  test_kamal_deploy_config.py  test_map_h3_api.py  test_mappings.py  test_ogm_field_mapper.py  test_sanity.py  test_simple.py
cli/: Makefile  README.md  pyproject.toml
cli/docs/: btaa-geo-api.1.md
cli/man/: btaa-geo-api-download.1  btaa-geo-api-schema.1  btaa-geo-api-search.1
cli/tests/: conftest.py  test_aardvark.py  test_analytics.py  test_client.py  test_commands.py  test_config.py  test_downloads.py  test_filters.py
qgis-plugin/: Makefile  __init__.py  api_client.py  downloader.py  metadata.txt  plugin.py  pyproject.toml  settings_dialog.py  ui_dialog.py
qgis-plugin/docs/: testing.md
qgis-plugin/tests/: conftest.py  test_api_client.py  test_downloader.py  test_plugin.py  test_settings_dialog.py  test_ui_dialog.py
(+1029 files in other folders)
