[project]
name = "data-api"
version = "0.6.0"
description = "BTAA OpenGeoMetadata API"
requires-python = ">=3.11"
authors = [
    {name = "Eric Larson", email = "ewlarson@gmail.com"},
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "click==8.1.7",
    "databases==0.9.0",
    "exceptiongroup==1.2.2",
    "fastapi>=0.115.6",
    "h11==0.16.0",
    "idna==3.10",
    "mccabe==0.7.0",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "psycopg2-binary==2.9.10",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.36",
    "starlette==0.49.1",
    "tomli==2.2.1",
    "typing_extensions>=4.14.1",
    "uvicorn==0.32.1",
    "websockets==15.0.1",
    "requests==2.33.0",
    "docker==7.1.0",
    "elasticsearch>=9.0.0",
    "urllib3==2.6.3",
    "python-dotenv>=1.0.0",
    "Jinja2>=3.1.2",
    "aiohttp==3.13.4",
    "redis==5.0.0",
    "celery>=5.3.0",
    "flower==2.0.1",
    "greenlet==3.1.1",
    "pytesseract==0.3.10",
    "Pillow==12.1.1",
    "geopandas==1.1.2",
    "fiona==1.10.1",
    "openai==1.12.0",
    "jsonschema>=4.21.1",
    "duckdb>=1.3.1",
    "pandas>=2.3.0",
    "mcp>=1.23.0",
    "user-agents>=2.2.0",
    "py-staticmaps[cairo]>=0.4.0",
    "rio-tiler>=8.0.0",
    "pmtiles>=3.0.0",
    "mapbox-vector-tile>=2.0.0",
    "pycairo>=1.29.0",
    "h3>=4.0.0",
    "appsignal>=1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "pyyaml>=6.0.3",
    "lxml>=5.0.0",
    "python-multipart==0.0.26",
    "tornado==6.5.5",
    "Pygments==2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.25.3",
    "pytest-xdist>=3.5.0",
    "ruff>=0.11.6",
    "mypy==1.9.0",
    "httpx>=0.24.0",
]

[tool.setuptools]
packages = ["app", "db"]

# Simple Ruff configuration - compatible with v0.11.6
[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "frontend",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
