[project]
name = "btaa-geo-api-cli"
version = "0.1.0"
description = "Command line interface for the BTAA Geospatial API"
requires-python = ">=3.11"
authors = [
    {name = "BTAA Geoportal Team"},
]
dependencies = [
    "httpx>=0.24.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pytest>=8.2.0",
    "ruff>=0.11.6",
]

[project.scripts]
btaa-geo-api = "btaa_geo_api_cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
